--- a/card.css
+++ b/card.css
@@ -1,48 +1,90 @@
-.img_opt {
-    width: 150px;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgba(0, 0, 0, 0.897);
+    color: white;
+  }
+  
+  #avatar {
+    width: 138px;
     height: auto;
     padding: 10px;
-    border-radius: 50%;
-}
-body {
-    background: plum;
-}
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    background: black;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    color: white;
-    margin-top: 20%;
-    margin-bottom: auto;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-.grn {
-    color: green;
-}
-.do_flx {
+    border-radius: 70%;
+  }
+  .flip-card {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: transparent;
     display: flex;
+    width: 555px;
+    height: 270px;
+    text-align: center;
+    perspective: 1000px;
+    
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient( rgb(0, 0, 0),rgba(28, 26, 26, 0.923));
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: white;
+  }
+  
+  .flip-card-back {
+    color: white;
+    transform: rotateY(180deg);
+    display: flex;
+
+  }
+  .grn {
+    color: #9ccc65;
 }
-.add_padding {
+ .blu {
+   color: #29b6f6
+ }
+ .red {
+    color: red;
+ }
+.add-padding {
     padding: 5px;
 }
-.left_padding {
+.left-padding {
     padding-left: 8px;
 }
-.mk_center {
+.mk-center {
     text-align: center;
 }
-.mrg_left {
+.mrg-left {
     margin-left: 90px;
 }
-.contact_me a {
+.contact-me a {
     position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background: transparent;
     border: 2px solid green;
     border-radius: 50%;
@@ -53,6 +95,10 @@ body {
     overflow: hidden;
     transition: 0.5s;
 }
-.contact_me a:hover {
-    color: #081b29;
+.contact-me a:hover {
+    color: #309cf4;
+}
+.front {
+    margin-top: 100px;
+    font-size: 25px;
 }
